--- a/peerinst/templates/registration/login.html
+++ b/peerinst/templates/registration/login.html
@@ -51,8 +51,8 @@
   </div>
 
   <div>
-    <input type="hidden" name="next" value="{{ next }}" />
-    <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="Submit" data-mdc-auto-init="MDCRipple"/>
+    <input type="hidden" name="next" value="{{ next }}"/>
+    <input class="mdc-button mdc-button--raised" type="submit" value="Submit"/>
   </div>
 </form>
 
