--- a/peerinst/templates/registration/password_change_form.html
+++ b/peerinst/templates/registration/password_change_form.html
@@ -33,7 +33,7 @@
     {{ field.errors }}
   {% endfor %}
   <div>
-    <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="{% trans 'Change password' %}" data-mdc-auto-init="MDCRipple"/>
+    <input class="mdc-button mdc-button--raised" type="submit" value="{% trans 'Change password' %}"/>
   </div>
 </form>
 
