--- a/peerinst/templates/registration/password_reset_form.html
+++ b/peerinst/templates/registration/password_reset_form.html
@@ -28,7 +28,7 @@
     {{ form.email.errors }}
 
     <div>
-      <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="Reset password" data-mdc-auto-init="MDCRipple"/>
+      <input class="mdc-button mdc-button--raised" type="submit" value="Reset password"/>
     </div>
   </form>
 </div>
