--- a/peerinst/templates/registration/password_reset_confirm.html
+++ b/peerinst/templates/registration/password_reset_confirm.html
@@ -35,7 +35,7 @@
       {{ field.errors }}
     {% endfor %}
     <div>
-      <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="{% trans 'Set password' %}" data-mdc-auto-init="MDCRipple"/>
+      <input class="mdc-button mdc-button--raised" type="submit" value="{% trans 'Set password' %}"/>
     </div>
   </form>
 
