--- a/peerinst/templates/peerinst/base.html
+++ b/peerinst/templates/peerinst/base.html
@@ -52,6 +52,7 @@
   {% compress js %}
   <script src="{% static 'peerinst/js/vendor/d3.v4.min.js'  %}"></script>
   <script src="{% static 'peerinst/js/vendor/material-components-web.min.js'  %}"></script>
+  <script src="{% static 'peerinst/js/underline.js'  %}"></script>
   {% endcompress %}
 
   <div class="site-content">
