--- a/peerinst/templates/peerinst/blinkassignment_detail.html
+++ b/peerinst/templates/peerinst/blinkassignment_detail.html
@@ -14,116 +14,114 @@
 {% endblock %}
 
 {% block body %}
-<h1>Update blink script</h1>
-<div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
-<h2>{{object.title}}</h2>
-<ol>
-{% for a in object.blinkassignmentquestion_set.all %}
-  <li>
-    <strong>
-      {{a.blinkquestion.question.title|safe}}
-    </strong>
-    - {{a.blinkquestion.question.text|safe}}
-    <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="clear" />
-        <input class="material-icons mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="clear" data-mdc-auto-init="MDCRipple"/>
-    </form>
-    {% if forloop.counter > 1 %}
-    <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="up" />
-        <input type="submit" value="arrow_upward" />
-    </form>
-    {% endif %}
-    {% if not forloop.last %}
-    <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
-        <input type="hidden" name="rank" value="down" />
-        <input type="submit" value="arrow_downward" />
-    </form>
-    {% endif %}
-  </li>
-{% endfor %}
-</ol>
-
-
-<h2>All your blinks</h2>
-<ol>
-{% for g in teacher.blinkquestion_set.all %}
-  {% if not g in object.blinkquestions.all %}
-  <li>    <strong>
-      {{g.question.title|safe}}
-    </strong> - {{g.question.text|safe}}
-    <form style="display:inline" action="" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="blink" value="{{g.pk}}" />
-        <input type="submit" value="add" />
-    </form>
-    {% if g.question.image %}
-    <div>
-      <img style="display:block;margin:auto;
-      padding-top:10pt;
-      padding-bottom:10pt;" src="{{ g.question.image.url }}"
-           alt="g.question.image_alt_text">
-    </div>
-    {% endif %}
-  </li>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Update Script
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
+  <div class="admin-link">
+    <a href="{% url 'teacher' teacher.id %}">Back to My Account</a>
+  </div>
+  <h2 class="mdc-typography--headline  mdc-theme--secondary">{{object.title}}</h2>
+  {% if not object.blinkassignmentquestion_set.all %}
+  <ul>
+    <li><strong>Note:</strong> There are currently no blink questions in this script.  You can add them from the list below.</li>
+  </ul>
   {% endif %}
-{% endfor %}
-</ol>
+  <ol>
+  {% for a in object.blinkassignmentquestion_set.all %}
+    <li>{{a.blinkquestion.question.text|safe}}
+      <br>
+      <span class="mdc-typography--caption">
+        {{a.blinkquestion.question.title|safe}}
+      </span>
+      <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
+          <input type="hidden" name="rank" value="clear" />
+          <br>
+          <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="clear"/>
+      </form>
+      {% if forloop.counter > 1 %}
+      <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
+          <input type="hidden" name="rank" value="up" />
+          <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_upward" />
+      </form>
+      {% endif %}
+      {% if not forloop.last %}
+      <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="q" value="{{a.blinkquestion.key}}" />
+          <input type="hidden" name="rank" value="down" />
+          <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="arrow_downward" />
+      </form>
+      {% endif %}
+    </li>
+  {% endfor %}
+  </ol>
 
-
-<h2>All questions in discipline</h2>
-<ol>
-{% for g in suggested_questions %}
-  <li>
-    <strong>
-      {{g.title|safe}}
-    </strong> - {{g.text|safe}}
-    <form action="" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="new_blink" value="{{g.pk}}" />
-        <input type="submit" value="add" />
-    </form>
-    {% if g.image %}
-    <div>
-      <img style="display:block;margin:auto;
-      padding-top:10pt;
-      padding-bottom:10pt;" src="{{ g.image.url }}"
-           alt="g.image_alt_text">
-    </div>
+  <h2 class="mdc-typography--headline  mdc-theme--secondary">All your blinks</h2>
+  <ol>
+  {% for g in teacher.blinkquestion_set.all %}
+    {% if not g in object.blinkquestions.all %}
+    <li>{{g.question.text|safe}}
+      <br>
+      <span class="mdc-typography--caption">
+        {{g.question.title|safe}}
+      </span>
+      <form style="display:inline" action="" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="blink" value="{{g.pk}}" />
+          <br>
+          <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="add" />
+      </form>
+      {% if g.question.image %}
+      <div>
+        <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{ g.question.image.url }}" alt="g.question.image_alt_text">
+      </div>
+      {% endif %}
+    </li>
     {% endif %}
+  {% endfor %}
+  </ol>
 
-  </li>
-
-{% endfor %}
-</ol>
-
-
-<!-- <ol>
-{% for g in teacher.blinkquestion_set.all %}
-  {% if g not in object.blinkquestions.all %}
-  <li> {{g|safe|striptags}}
-    <form style="display:inline;" action="{% url 'blinkAssignment-update' object.pk %}" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{g.pk}}" />
-        <input type="submit" value="add" />
-    </form>
-    {% if g.question.image %}
-    <div>
-      <img style="display:block;margin:auto;
-      padding-top:10pt;
-      padding-bottom:10pt;"  src="{{ g.question.image.url }}"
-           alt="g.question.image_alt_text">
-    </div>
-    {% endif %}
-  </li>
+  <h2 class="mdc-typography--headline  mdc-theme--secondary">All questions in discipline</h2>
+  {% if not suggested_questions %}
+  <ul>
+    <li><strong>Note:</strong> You have selected all available questions for this discipline.</li>
+  </ul>
   {% endif %}
-{% endfor %}
-</ol> -->
+  <ol>
+  {% for g in suggested_questions %}
+    <li>{{g.text|safe}}
+        <br>
+        <span class="mdc-typography--caption">
+          {{g.title|safe}}
+        </span>
+      <form action="" method="post">
+          {% csrf_token %}
+          <input type="hidden" name="new_blink" value="{{g.pk}}" />
+          <br>
+          <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="add" />
+      </form>
+      {% if g.image %}
+      <div>
+        <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{ g.image.url }}" alt="g.image_alt_text">
+      </div>
+      {% endif %}
+    </li>
+  {% endfor %}
+  </ol>
+</section>
+</main>
 
+{% endblock %}
+
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
