--- a/peerinst/templates/peerinst/blinkassignment_form.html
+++ b/peerinst/templates/peerinst/blinkassignment_form.html
@@ -1,11 +1,28 @@
 {% extends 'peerinst/base.html' %}
-{% load i18n %}
+
+{% load add_class i18n %}
 
 {% block body %}
-<h2>Create a new blink script</h2>
-<form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Create" />
+<h2 class="mdc-typography--headline mdc-theme--secondary">Create a new blink script</h2>
+<form method="post">
+  {% csrf_token %}
+  {% for field in form %}
+    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+      {{ field|add_class:"mdc-text-field__input" }}
+      {{ field.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+      <div class="mdc-notched-outline">
+        <svg>
+          <path class="mdc-notched-outline__path"/>
+        </svg>
+      </div>
+      <div class="mdc-notched-outline__idle"></div>
+    </div>
+    <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
+      {{ field.help_text|safe }}
+    </p>
+    {{ field.errors }}
+  {% endfor %}
+  <input  class="mdc-button mdc-button--raised" type="submit" value="Create" />
 </form>
 
 {% endblock %}
