--- a/peerinst/templates/registration/password_change_done.html
+++ b/peerinst/templates/registration/password_change_done.html
@@ -1,10 +1,9 @@
 {% extends 'peerinst/base.html' %}
 
 {% block body %}
-<div>
-<h1>Password successfully changed</h1>
+
+<h2 class="mdc-typography--headline mdc-theme--secondary">Password successfully changed</h2>
 
   <a href="{% url 'teacher' user.teacher.id %}">Back to my account</a>
-  
-</div>
+
 {% endblock %}
