--- a/peerinst/templates/registration/password_reset_confirm.html
+++ b/peerinst/templates/registration/password_reset_confirm.html
@@ -1,16 +1,18 @@
 {% extends "peerinst/base.html" %}
 
-{% load add_class %}
-
-{% load i18n static %}
+{% load add_class i18n static %}
 
 {% block body %}
 
-<h1>{{ title }}</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">{{title|title}}
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
-{% block content %}
+  {% block content %}
 
-{% if validlink %}
+  {% if validlink %}
 
   <p>{% trans "Please enter your new password twice so we can verify you typed it correctly." %}</p>
 
@@ -39,12 +41,21 @@
     </div>
   </form>
 
-{% else %}
+  {% else %}
 
   <p>{% trans "The password reset link was invalid, possibly because it has already been used.  Please request a new password reset." %}</p>
 
-{% endif %}
+  {% endif %}
+
+  {% endblock %}
+</section>
+</main>
 
 {% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
