--- a/peerinst/templates/registration/password_reset_form.html
+++ b/peerinst/templates/registration/password_reset_form.html
@@ -4,8 +4,11 @@
 
 {% block body %}
 
-<div>
-  <h1>Password reset</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Password Reset
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
   <p>Enter your email address below and we will send you a link to reset your password.</p>
 
@@ -31,6 +34,13 @@
       <input class="mdc-button mdc-button--raised" type="submit" value="Reset password"/>
     </div>
   </form>
-</div>
+</section>
+</main>
+{% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
