--- a/peerinst/templates/registration/password_change_form.html
+++ b/peerinst/templates/registration/password_change_form.html
@@ -6,37 +6,48 @@
 
 {% block body %}
 
-<h1>{{ title }}</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">{{title|title}}
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
-{% block content %}
+  {% block content %}
 
-<p>{% trans "Please enter your old password, for security's sake, and then your new password twice so we can verify you typed it correctly." %}</p>
+  <p>{% trans "Please enter your old password, for security's sake, and then your new password twice so we can verify you typed it correctly." %}</p>
 
-{{ form.non_field_errors }}
+  {{ form.non_field_errors }}
 
-<form method="post" id="password_change_form">
-  {% csrf_token %}
-  {% for field in form %}
-    <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
-      {{ field|add_class:"mdc-text-field__input" }}
-      {{ field.label_tag|add_class:"mdc-floating-label"|cut:":" }}
-      <div class="mdc-notched-outline">
-        <svg>
-          <path class="mdc-notched-outline__path"/>
-        </svg>
+  <form method="post" id="password_change_form">
+    {% csrf_token %}
+    {% for field in form %}
+      <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
+        {{ field|add_class:"mdc-text-field__input" }}
+        {{ field.label_tag|add_class:"mdc-floating-label"|cut:":" }}
+        <div class="mdc-notched-outline">
+          <svg>
+            <path class="mdc-notched-outline__path"/>
+          </svg>
+        </div>
+        <div class="mdc-notched-outline__idle"></div>
       </div>
-      <div class="mdc-notched-outline__idle"></div>
+      <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
+        {{ field.help_text|safe }}
+      </p>
+      {{ field.errors }}
+    {% endfor %}
+    <div>
+      <input class="mdc-button mdc-button--raised" type="submit" value="{% trans 'Change password' %}"/>
     </div>
-    <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
-      {{ field.help_text|safe }}
-    </p>
-    {{ field.errors }}
-  {% endfor %}
-  <div>
-    <input class="mdc-button mdc-button--raised" type="submit" value="{% trans 'Change password' %}"/>
-  </div>
-</form>
-
+  </form>
+  {% endblock %}
+</section>
+</main>
 {% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
