--- a/peerinst/templates/registration/password_reset_done.html
+++ b/peerinst/templates/registration/password_reset_done.html
@@ -1,12 +1,23 @@
 {% extends 'peerinst/base.html' %}
 
 {% block body %}
-<div>
-<h1>Email Sent</h1>
 
-  <h2>Please check your inbox</h2>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Email Sent
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
-    <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
-    
-</div>
+  <h2 class="mdc-typography--headline mdc-theme--secondary">Please check your inbox</h2>
+
+  <p>We've emailed you instructions for setting your password. You should receive the email shortly!</p>
+</section>
+</main>
+{% endblock %}
+
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
