--- a/peerinst/templates/registration/sign_up.html
+++ b/peerinst/templates/registration/sign_up.html
@@ -5,7 +5,7 @@
 {% block body %}
 <main>
 <section>
-  <h1 class="mdc-typography--display3" style="position:sticky;">Sign up
+  <h1 class="mdc-typography--display3" style="position:sticky;">Sign Up
     <svg class="underline" width=150 height=4></svg>
   </h1>
 
