--- a/peerinst/templates/registration/sign_up_done.html
+++ b/peerinst/templates/registration/sign_up_done.html
@@ -2,8 +2,20 @@
 
 {% block body %}
 
-<h1>Processing request</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Processing Request
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
   <p> A member of our team will contact you once your account has been created.</p>
+</section>
+</main>
+{% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
