--- a/peerinst/templates/registration/terms.html
+++ b/peerinst/templates/registration/terms.html
@@ -2,10 +2,24 @@
 
 {% block body %}
 
-<h1>Terms of Service</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Terms of Service
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
-  <div class="admin-link"><a href="{% url 'sign_up' %}">Back to sign up</a></div>
+  <div class="admin-link">
+    <a href="{% url 'sign_up' %}">Back to sign up</a>
+  </div>
 
   {% include 'peerinst/terms_of_service_teachers.html' %}
+</section>
+</main>
+{% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
