--- a/peerinst/templates/peerinst/assignment_detail.html
+++ b/peerinst/templates/peerinst/assignment_detail.html
@@ -1,66 +1,89 @@
 {% extends 'peerinst/base.html' %}
-{% load i18n %}
 
-{% block body %}
+{% load compress i18n %}
 
+{% block stylesheets %}
+{% compress css inline %}
 <style>
-  input[type="submit"] {
-    font-family: 'Material Icons';
-    font-size: 10pt;
-    padding:1pt;
-    margin-left:3pt;
-
-  }
   img {
     max-width:50%;
     max-height:200px;
   }
 </style>
+{% endcompress %}
+{% endblock %}
 
-
-<h1>Update assignment</h1>
-<div class="admin-link" style="margin-bottom:0pt;"><a href="{% url 'teacher' teacher.id %}">Back to My Account</a></div>
-<h2>{{object.title}}</h2>
-<ol>
-{% for a in object.questions.all %}
-  <li>
-    <strong>
+{% block body %}
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Update Assignment
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
+  <div class="admin-link">
+    <a href="{% url 'teacher' teacher.id %}">Back to My Account</a>
+  </div>
+  <h2 class="mdc-typography--headline  mdc-theme--secondary">{{object.title}}</h2>
+  {% if not object.questions.all %}
+  <ul>
+    <li><strong>Note:</strong> There are currently no questions in this assignment.  You can add them from the list below.</li>
+  </ul>
+  {% endif %}
+  <ol>
+    {% for a in object.questions.all %}
+    <li>{{a.text|safe}}
+    <br>
+    <span class="mdc-typography--caption">
       {{a.title|safe}}
-    </strong> - {{a.text|safe}}
+    </span>
     <form style="display:inline;" method="post">
-        {% csrf_token %}
-        <input type="hidden" name="q" value="{{a.pk}}" />
-        <input type="submit" value="clear" />
+      {% csrf_token %}
+      <input type="hidden" name="q" value="{{a.pk}}" />
+      <br>
+      <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="clear" />
     </form>
     {% if a.image %}
     <div>
       <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{a.image.url }}" alt="a.image_alt_text">
     </div>
     {% endif %}
-  </li>
-{% endfor %}
-</ol>
+    </li>
+    {% endfor %}
+  </ol>
 
-
-<h2>All questions in discipline</h2>
-<ol>
-{% for g in suggested_questions %}
-  <li>
-    <strong>
-      {{g.title|safe}}
-    </strong> - {{g.text|safe}}
-    <form style="display:inline;" method="post">
+  <h2 class="mdc-typography--headline  mdc-theme--secondary">All questions in discipline</h2>
+  {% if not suggested_questions %}
+  <ul>
+    <li><strong>Note:</strong> You have selected all available questions for this discipline.</li>
+  </ul>
+  {% endif %}
+  <ol>
+  {% for g in suggested_questions %}
+    <li>{{g.text|safe}}
+      <br>
+      <span class="mdc-typography--caption">
+        {{g.title|safe}}
+      </span>
+      <form style="display:inline;" method="post">
         {% csrf_token %}
         <input type="hidden" name="q" value="{{g.pk}}" />
-        <input type="submit" value="add" />
-    </form>
-    {% if g.image %}
-    <div>
-      <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{g.image.url }}" alt="g.image_alt_text">
-    </div>
-    {% endif %}
-  </li>
-{% endfor %}
-</ol>
+        <br>
+        <input class="material-icons small-button mdc-button mdc-button--raised" type="submit" value="add" />
+      </form>
+      {% if g.image %}
+      <div>
+        <img style="display:block;margin:auto;padding-top:10pt;padding-bottom:10pt;" src="{{g.image.url }}" alt="g.image_alt_text">
+      </div>
+      {% endif %}
+    </li>
+  {% endfor %}
+  </ol>
+</section>
+</main>
+{% endblock %}
 
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
