--- a/peerinst/templates/peerinst/teacher_form.html
+++ b/peerinst/templates/peerinst/teacher_form.html
@@ -14,38 +14,50 @@ form option {
 }
 form label {
   vertical-align: top;
+  padding-right:10px;
 }
 .form_field_wrapper {
   padding-bottom: 10px;
 }
 </style>
 
-<h1>Identity</h1>
+<main>
+<section>
+  <h1 class="mdc-typography--display3" style="position:sticky;">Identity
+    <svg class="underline" width=150 height=4></svg>
+  </h1>
 
-<h2>Edit discipline and institution</h2>
+  <h2 class="mdc-typography--display1 mdc-theme--secondary">Edit discipline and institution</h2>
 
-<p>Select content disciplines and the institutions where you teach.  You can select multiple choices using the shift button.</p>
+  <p>Select content disciplines and the institutions where you teach.  You can select multiple choices using the shift button.</p>
 
-{{ form.non_field_errors }}
+  {{ form.non_field_errors }}
 
-<div>
-<form action="{% url 'teacher-update' object.id %}" method="post">
-    {% csrf_token %}
+  <form action="{% url 'teacher-update' object.id %}" method="post">
+      {% csrf_token %}
 
-    <div class="form_field_wrapper">
-      {{ form.institutions.errors }}
-      {{ form.institutions.label_tag }}
-      {{ form.institutions }}
-    </div>
+      <div class="form_field_wrapper">
+        {{ form.institutions.errors }}
+        {{ form.institutions.label_tag }}
+        {{ form.institutions }}
+      </div>
 
-    <div class="form_field_wrapper">
-      {{ form.disciplines.errors }}
-      {{ form.disciplines.label_tag }}
-      {{ form.disciplines }}
-    </div>
+      <div class="form_field_wrapper">
+        {{ form.disciplines.errors }}
+        {{ form.disciplines.label_tag }}
+        {{ form.disciplines }}
+      </div>
 
-    <input class="mdc-button mdc-button--raised mdc-ripple-surface" type="submit" value="Update" data-mdc-auto-init="MDCRipple"/>
-</form>
-</div>
+      <input class="mdc-button mdc-button--raised" type="submit" value="Update"/>
+  </form>
 
+</section>
+</main>
+{% endblock %}
+
+{% block scripts %}
+<script>
+underlines();
+window.addEventListener("resize",underlines);
+</script>
 {% endblock %}
