--- a/peerinst/templates/peerinst/assignment_list.html
+++ b/peerinst/templates/peerinst/assignment_list.html
@@ -15,7 +15,7 @@
   <div class="search">
     <div class="mdc-text-field mdc-text-field--outlined mdc-text-field--dense" data-mdc-auto-init="MDCTextField">
       <label class="mdc-floating-label" for="search-bar">Search</label>
-      <input class="mdc-text-field__input" type="search" id="search-bar" oninput="search()" size="50">
+      <input class="mdc-text-field__input" type="search" id="search-bar" oninput="search()" size="50" style="-webkit-transform:translateY(-8pt)">
       <div class="mdc-notched-outline">
         <svg>
           <path class="mdc-notched-outline__path"/>
@@ -24,15 +24,16 @@
       <div class="mdc-notched-outline__idle"></div>
     </div>
     <p class="mdc-text-field-helper-text mdc-text-field-helper-text--persistent" aria-hidden="true">
-      The assignment list will be filtered for titles that contain the string entered here.
+      The assignment list will be filtered for titles that contain the above string.
     </p>
   </div>
 
   <ul>
   {% for obj in object_list %}
-    <li id="{{ obj.title }}" name="item">{{ forloop.counter }}. <a href="{% url 'question-list' assignment_id=obj.pk %}">
-      {{ obj.title }}
-    </a></li>
+    <li id="{{ obj.title }}" name="item">
+      {{ forloop.counter }}. <a href="{% url 'question-list' assignment_id=obj.pk %}">
+      {{ obj.title }}</a>
+    </li>
   {% empty %}
     <li>{% trans 'No assignments available.' %}</li>
   {% endfor %}
